--- a/myapp/public/manifest.json
+++ b/myapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WiE GCR",
+  "name": "WiE Garbage Collector Robot",
   "icons": [
     {
       "src": "favicon.ico",
