--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
+    "reactjs-popup": "^2.0.4",
     "social-media-icons-react": "^1.1.2"
   },
   "scripts": {
