--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fseehawer/react-circular-slider": "^2.3.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-jquery-plugin": "^1.1.7",
+    "react-native-circular-slider": "^1.0.1",
+    "react-native-svg": "^12.1.1-0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll": "^1.8.1",
     "reactjs-popup": "^2.0.4",
+    "round-slider": "^1.6.1",
+    "roundy": "^3.0.3",
     "social-media-icons-react": "^1.1.2"
   },
   "scripts": {
