--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/model-viewer": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -39,5 +43,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.5",
+    "@types/react-scroll": "^1.8.2",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.1",
+    "typescript": "^4.2.4"
   }
 }
