--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/model-viewer": "^1.7.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react": "^17.0.6",
+    "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-native-circular-slider": "^1.0.1",
     "react-native-svg": "^12.1.1-0",
     "react-router-dom": "^5.2.0",
@@ -17,7 +21,8 @@
     "react-scroll": "^1.8.1",
     "reactjs-popup": "^2.0.4",
     "round-slider": "^1.6.1",
-    "social-media-icons-react": "^1.1.2"
+    "social-media-icons-react": "^1.1.2",
+    "three": "^0.109.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +44,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.5",
+    "@types/react-scroll": "^1.8.2",
+    "source-map-loader": "^3.0.0",
+    "ts-loader": "^9.2.1",
+    "typescript": "^4.3.4"
   }
 }
